--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,7 @@
-[package]
-name = "protohackers"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+members = [
+    "p00_smoke_test",
+    "p01_prime_time",
+    "utils",
+]
